# hakai-ctd-qc

./: .gitignore  .isort.cfg  .releaserc.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  MANIFEST.in  README.md  crontab.production  default-config.yaml  development-requirements.txt  docker-compose.yaml  docker-environment.yaml  environment.yaml  generate-research-ncfiles.ipynb  hakai.py  pylintrc  pyproject.toml  qc_config.md  review-hakai-tests.ipynb  run-cron.sh  sample.env  setup.cfg  setup.py  table_qc_config.md  update_qc_config_markdown.py  utils.py
.github/workflows/: cron-job-qc-unqced-profiles-hecate-.yml  cron-job-qc-unqced-profiles-hecate-from-caprover.yml  cron-job-qc-unqced-profiles-hecate.yml  deploy.yml  run-goose-test-suite-from-caprover.yml  run-goose-test-suite-on-caprover.yml  run-qc-rebuild-hakai-app.yml  run-qc-rebuild-hakai-production.yml  run-qc-rebuild-hakaidev-development.yml  test-docker-build.yml  test-package-install.yml
doc/: table_qc_config.md  tests_description.md
doc/hakai_dataset_known_issues/: known_issues.md
hakai_ctd_qc/: HakaiProfileDatasetGreyList.csv  __main__.py  api.py  hakai_tests.py  sentry_warnings.py  variables.py  version.py
hakai_ctd_qc/config/: hakai_ctd_profile_tests_config.json
hakai_dataset_known_issues/: known_issues.md
hakai_profile_qc/: HakaiStationLocations.csv  Hakai_CTD_stations_metadata.csv  StationLocations.csv  __init__.py  __main__.py  api.py  app.py  get.py  hakai_tests.py  research.py  review.py  sentry_warnings.py  show.py  transform.py  utils.py  variables.py  version.py
hakai_profile_qc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hakai_profile_qc/config/: HAKAI_ID_TEST_SUITE.txt  config.yaml  (+5 more)
hakai_qc/: HakaiStationLocations.csv  __init__.py  get.py  hakai_tests.py  run.py  show.py  test.py  transform.py  utils.py
hakai_qc.egg-info/: PKG-INFO  SOURCES.txt
notebook/: generate-research-ncfiles.ipynb  review-hakai-tests-from-db.ipynb  review_research_vs_qartod.ipynb  update-hakai-db-flags.ipynb
notebooks/: review-qc.ipynb  review_bad_location_drops.ipynb  review_remote_drops.ipynb
review/: get_depth_in_station_range_test_results.sql  inspect_deep_station_flag.py  inspect_station_location.py
script/: generate_provisional_dataset.py  generate_provisional_files.py  review_hakai_profiles.py
scripts/: review_station_flags.sql
src/: hakai_tests.py  qc.py  show.py
test/: test_hakai_database_update_tool.py  test_research_submission.py  test_with_hakai_qu39.py
tests/: conftest.py  hakai_ids_with_issues.py  test_api.py  test_hakai_qc.py  test_hakai_tests.py  test_local_test_suite.py  test_qc_tools.py  test_source_expected_results.py  test_utils.py  test_version.py  utils.py
(+9 files in other folders)
