[tool.poetry]
name = "hakai-profile-qaqc"
version = "0.2.0"
description = "QC Hakai CTD Profiles"
authors = ["Jessy Barrette <30420025+JessyBarrette@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "hakai_profile_qc" }
]
    

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.1.2"
gsw = "^3.6.17"
ioos-qc = "^2.1.0"
hakai-api = "^1.5.1"
tqdm = "^4.66.1"
PyYAML = "^6.0.1"
sentry-sdk = "^1.32.0"
click = "^8.1.7"
pyarrow = "^13.0.0"
fastparquet = "^2023.10.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.3"
black = {extras = ["jupyter"], version = "^24.4.2"}
isort = "^5.13.2"

[tool.poetry.group.review.dependencies]
sqlalchemy = "^2.0.31"

[tool.isort]
profile = "black"
known_first_party="hakai_profile_qc"

[sqlfluff]
dialect = "postgres"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
