[tool.poetry]
name = "hakai-profile-qaqc"
version = "0.3.0"
description = "QC Hakai CTD Profiles"
authors = ["Jessy Barrette <30420025+JessyBarrette@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "hakai_profile_qc" }
]
    

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.1.2"
gsw = "^3.6.17"
ioos-qc = "^2.1.0"
hakai-api = "^1.5.1"
tqdm = "^4.66.1"
PyYAML = "^6.0.1"
sentry-sdk = {extras = ["loguru"], version = "^2.7.1"}
click = "^8.1.7"
pyarrow = "^13.0.0"
fastparquet = "^2023.10.1"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
fastapi = "^0.112.1"
scheduler = "^0.8.7"
uvicorn = "^0.30.6"
toml = "^0.10.2"
schedule = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.3"
black = {extras = ["jupyter"], version = "^24.4.2"}
isort = "^5.13.2"

[tool.poetry.group.review.dependencies]
sqlalchemy = "^2.0.31"

[sqlfluff]
dialect = "postgres"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
