[metadata]
name = hakai_profile_qc
version = attr: my_package.VERSION
description = Package use to automatically QC Hakai Vertical Profiles
long_description = file: README.md
keywords = qc, hakai, oceanography, ctd, profile

[options]
zip_safe = False
include_package_data = True
packages = src
install_requires =
    pandas
    xarray
    tqdm
    ioos_qc
    gsw

[options.package_data]
* = *.yaml, *.json

[options.entry_points]
console_scripts =
    executable-name = src.qc:function

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    notebooks*
    docs*